@@ -17,7 +17,10 @@ const { decode } = require('html-entities')
  * @param {Boolean} config.indexLatestOnly - If true, only index the latest version of any given page.
  * @param {Array<String>} config.languages - List of index languages
  * @param {Object} config.logger - Logger to use
- * @returns {Object} A JSON object with a Lunr index and a documents store.
+ * @typedef {Object} SearchIndexData
+ * @property {lunr.Index} index - a Lunr index
+ * @property {Object} store - the documents store
+ * @returns {SearchIndexData} A data object that contains the Lunr index and documents store
  */
 function generateIndex (playbook, contentCatalog, { indexLatestOnly = false, languages = ['en'], logger } = {}) {
   if (!logger) logger = process.env.NODE_ENV === 'test' ? { info: () => undefined } : console
@@ -36,17 +39,15 @@ function generateIndex (playbook, contentCatalog, { indexLatestOnly = false, lan
   })
   if (!pages.length) return {}
 
-  // Map of Lunr ref to document
-  const documentsStore = {}
-  const documents = pages
-    .map((page) => {
-      const html = page.contents.toString()
-      const $ = cheerio.load(html)
-      return { page, $ }
-    })
-    // Exclude pages marked as "noindex"
-    .filter(({ page, $ }) => !$('meta[name=robots][content=noindex]').length)
-    .map(({ page, $ }) => extractIndexContent(page, $))
+  // Extract document objects from indexable pages
+  const documents = pages.reduce((accum, page) => {
+    const $ = cheerio.load(page.contents)
+    // Only index page if not marked as "noindex" by "robots" meta tag
+    if (!$('meta[name=robots][content=noindex]').length) {
+      accum.push(extractIndexContent(page, $))
+    }
+    return accum
+  }, [])
 
   if (languages.length > 1 || !languages.includes('en')) {
     if (languages.length > 1 && typeof lunr.multiLanguage === 'undefined') {
@@ -68,43 +69,30 @@ function generateIndex (playbook, contentCatalog, { indexLatestOnly = false, lan
     })
   }
 
-  // Construct the lunr index from the composed content
-  const lunrIndex = lunr(function () {
-    const self = this
+  // Map of Lunr ref (page URL) to document
+  const store = {}
+
+  // Construct the Lunr index from the extracted content
+  const index = lunr(function () {
     if (languages.length > 1) {
-      self.use(lunr.multiLanguage(...languages))
+      this.use(lunr.multiLanguage(...languages))
     } else if (!languages.includes('en')) {
-      self.use(lunr[languages[0]])
-    } else {
-      // default language (English)
+      this.use(lunr[languages[0]])
     }
-    self.ref('url')
-    self.field('title', { boost: 10 })
-    self.field('name')
-    self.field('text')
-    self.field('component')
-    self.metadataWhitelist = ['position']
-    documents.forEach(function (doc) {
-      self.add(doc)
-      doc.titles.forEach(function (title) {
-        self.add({
-          title: title.text,
-          url: `${doc.url}#${title.id}`,
-        })
-      }, self)
-    }, self)
+    this.ref('url')
+    this.field('title', { boost: 10 })
+    this.field('name')
+    this.field('text')
+    this.field('component')
+    this.metadataWhitelist = ['position']
+    documents.forEach((doc) => {
+      this.add(doc)
+      doc.titles.forEach((title) => this.add({ title: title.text, url: `${doc.url}#${title.id}` }))
+      store[doc.url] = doc
+    })
   })
 
-  // Place all indexed documents into the store
-  documents.forEach(function (doc) {
-    documentsStore[doc.url] = doc
-  })
-
-  // Return the completed index, store, and component map
-  return {
-    index: lunrIndex,
-    store: documentsStore,
-  }
+  return { index, store }
 }
 
 /**
